Fixed links going behind the content box and order of links

--- a/styles.css
+++ b/styles.css
@@ -28,14 +28,9 @@
   opacity: 60%;
   min-height: 30%;
   min-width: 30%;
-}
-
-.contentBox {
-  background-color: black;
-  grid-column: 2/3;
-  grid-row: 2/4;
-  opacity: 60%;
   border-radius: 25px;
+  z-index: -1;
+  position: relative;
 }
 
 /* Add a black background color to the top navigation */
@@ -111,4 +106,6 @@
 }
 .aboutpagecontent h1{
   color: white;
+  z-index: -1;
+  position: relative;
 }
